added links and a little bit of styles also restructured the order of blocks

--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,13 @@
         <p class="home__subtitle lang_rus">я frontend-разработчик</p>
         <p class="home__subtitle lang_eng">I'm a frontend developer</p>
         <div class="socials home__socials">
-          <a class="socials__link" href="#">Telegram</a>
-          <a class="socials__link" href="#">WhatsApp</a>
-          <a class="socials__link" href="#">Github</a>
+          <a class="socials__link" href="https://t.me/lisabaz">Telegram</a>
+          <a class="socials__link" href="https://wa.me/+79260589068">
+            WhatsApp
+          </a>
+          <a class="socials__link" href="https://github.com/lisabazdyreva">
+            Github
+          </a>
         </div>
       </div>
       <div class="skills main__skills wrapper">
@@ -105,13 +109,15 @@
             <li class="skill-list__item pinia-badge">Pinia</li>
           </ul>
           <ul class="skill-list skills__skill-list">
-            <li class="skill-list__item">Git</li>
+            <li class="skill-list__item">Git, GitHub</li>
             <li class="skill-list__item">WebStorm</li>
           </ul>
         </div>
 
         <p class="skills__description lang_rus">
-          Тут будет описание моих навыков и чем заниамюсь сейчас
+          У меня есть коммерческий опыт с Angular + RxJs + SCSS + Material.
+          Остальные мои проекты - пет и учебные. Ниже будут ссылки на github на
+          каждый проект.
         </p>
         <p class="skills__description lang_eng">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
@@ -119,6 +125,103 @@
           suscipit vitae? Facere hic iste nemo nihil perspiciatis quae quibusdam
           quis reiciendis ut!
         </p>
+
+        <p class="skills__description lang_rus">
+          Внутри проектов есть описание с функционалом и используемыми
+          технологиями. Свои навыки в react + rtk (redux) + TS оцениваю довольно
+          высоко. Также интересуюсь фрейворком Vue3, но пока недостаточно опыта.
+        </p>
+        <p class="skills__description lang_eng">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur
+          deserunt dicta eveniet ipsam nesciunt provident quis reprehenderit
+          suscipit vitae? Facere hic iste nemo nihil perspiciatis quae quibusdam
+          quis reiciendis ut!
+        </p>
+      </div>
+      <div class="projects main__projects wrapper" id="projects">
+        <h2 class="projects__title lang_eng">Projects from work:</h2>
+        <h2 class="projects__title lang_rus">Рабочие проекты:</h2>
+        <article class="project-card projects__project-card">
+          <h3 class="project-card__title lang_eng">Neksy</h3>
+          <h3 class="project-card__title lang_rus">Нэкси</h3>
+          <p class="project-card__description lang_rus">
+            Сайт-визитка о бухгалтерских услугах. Текст, дизайн для проекта я
+            разрабатывала самостоятельно. Код написан с помощью следующих
+            технологий:
+          </p>
+          <p class="project-card__description lang_eng">About site</p>
+          <div class="project-card__technologies">
+            <ul class="technologies-list project-card__technologies-list">
+              <li class="technologies-list__item">HTML5</li>
+              <li class="technologies-list__item">CSS3</li>
+              <li class="technologies-list__item">Javascript</li>
+            </ul>
+          </div>
+
+          <a class="project-card__link lang_rus" href="https://neksy.ru/">
+            Перейти на сайт
+          </a>
+          <a class="project-card__link lang_eng" href="#">Go to site >></a>
+          <a class="project-card__link lang_rus" href="https://neksy.ru/">
+            Посмотреть исходники
+          </a>
+        </article>
+        <article class="project-card projects__project-card">
+          <h3 class="project-card__title lang_eng">Market trade</h3>
+          <h3 class="project-card__title lang_rus">Маркет трейд</h3>
+          <p class="project-card__description lang_rus">
+            Сайт поставщика продуктов питания. Текст и дизайн также созданы
+            мной, как и код. Сайт работает на движке WordPress.
+          </p>
+          <p class="project-card__description lang_eng">About site</p>
+          <div class="project-card__technologies">
+            <ul class="technologies-list project-card__technologies-list">
+              <li class="technologies-list__item">HTML5</li>
+              <li class="technologies-list__item">CSS3</li>
+              <li class="technologies-list__item">PHP</li>
+              <li class="technologies-list__item">Javascript</li>
+              <li class="technologies-list__item">Wordpress</li>
+            </ul>
+          </div>
+          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
+          <a class="project-card__link lang_eng" href="#">Go to site >></a>
+        </article>
+        <article class="project-card projects__project-card">
+          <h3 class="project-card__title lang_eng">Maxel</h3>
+          <h3 class="project-card__title lang_rus">Максэл</h3>
+          <p class="project-card__description lang_rus">
+            Сайт дистрибьютора продуктов питания. Текст и дизайн также созданы
+            мной, как и код. Сайт работает на движке WordPress.
+          </p>
+          <p class="project-card__description lang_eng">About site</p>
+          <div class="project-card__technologies">
+            <ul class="technologies-list project-card__technologies-list">
+              <li class="technologies-list__item">HTML5</li>
+              <li class="technologies-list__item">CSS3</li>
+              <li class="technologies-list__item">PHP</li>
+              <li class="technologies-list__item">Javascript</li>
+              <li class="technologies-list__item">Wordpress</li>
+            </ul>
+          </div>
+          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
+          <a class="project-card__link lang_eng" href="#">Go to site >></a>
+        </article>
+        <article class="project-card projects__project-card">
+          <h3 class="project-card__title lang_eng">USN</h3>
+          <h3 class="project-card__title lang_rus">Упрощёнка</h3>
+          <p class="project-card__description lang_rus">
+            Сайт времён работы в Актион, моей задачей была вёрстка.
+          </p>
+          <p class="project-card__description lang_eng">About site</p>
+          <div class="project-card__technologies">
+            <ul class="technologies-list project-card__technologies-list">
+              <li class="technologies-list__item">HTML5</li>
+              <li class="technologies-list__item">CSS3</li>
+            </ul>
+          </div>
+          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
+          <a class="project-card__link lang_eng" href="#">Go to site >></a>
+        </article>
       </div>
       <div class="description main__description wrapper">
         <article id="experience" class="work">
@@ -200,85 +303,6 @@
             прекрасными котами:)
           </p>
           <p class="about__info lang_eng">lorem</p>
-        </article>
-      </div>
-      <div class="projects main__projects wrapper" id="projects">
-        <h2 class="projects__title lang_eng">Projects from work:</h2>
-        <h2 class="projects__title lang_rus">Рабочие проекты:</h2>
-        <article class="project-card projects__project-card">
-          <h3 class="project-card__title lang_eng">Neksy</h3>
-          <h3 class="project-card__title lang_rus">Нэкси</h3>
-          <p class="project-card__description lang_rus">
-            Сайт-визитка о бухгалтерских услугах. Текст, дизайн для проекта я
-            разрабатывала самостоятельно. Естественно, код тоже.
-          </p>
-          <p class="project-card__description lang_eng">About site</p>
-          <div class="project-card__technologies">
-            <ul class="technologies-list project-card__technologies-list">
-              <li class="technologies-list__item">HTML5</li>
-              <li class="technologies-list__item">CSS3</li>
-              <li class="technologies-list__item">Javascript</li>
-            </ul>
-          </div>
-
-          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
-          <a class="project-card__link lang_eng" href="#">Go to site >></a>
-        </article>
-        <article class="project-card projects__project-card">
-          <h3 class="project-card__title lang_eng">Market trade</h3>
-          <h3 class="project-card__title lang_rus">Маркет трейд</h3>
-          <p class="project-card__description lang_rus">
-            Сайт поставщика продуктов питания. Текст и дизайн также созданы
-            мной, как и код. Сайт работает на движке WordPress.
-          </p>
-          <p class="project-card__description lang_eng">About site</p>
-          <div class="project-card__technologies">
-            <ul class="technologies-list project-card__technologies-list">
-              <li class="technologies-list__item">HTML5</li>
-              <li class="technologies-list__item">CSS3</li>
-              <li class="technologies-list__item">PHP</li>
-              <li class="technologies-list__item">Javascript</li>
-              <li class="technologies-list__item">Wordpress</li>
-            </ul>
-          </div>
-          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
-          <a class="project-card__link lang_eng" href="#">Go to site >></a>
-        </article>
-        <article class="project-card projects__project-card">
-          <h3 class="project-card__title lang_eng">Maxel</h3>
-          <h3 class="project-card__title lang_rus">Максэл</h3>
-          <p class="project-card__description lang_rus">
-            Сайт дистрибьютора продуктов питания. Текст и дизайн также созданы
-            мной, как и код. Сайт работает на движке WordPress.
-          </p>
-          <p class="project-card__description lang_eng">About site</p>
-          <div class="project-card__technologies">
-            <ul class="technologies-list project-card__technologies-list">
-              <li class="technologies-list__item">HTML5</li>
-              <li class="technologies-list__item">CSS3</li>
-              <li class="technologies-list__item">PHP</li>
-              <li class="technologies-list__item">Javascript</li>
-              <li class="technologies-list__item">Wordpress</li>
-            </ul>
-          </div>
-          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
-          <a class="project-card__link lang_eng" href="#">Go to site >></a>
-        </article>
-        <article class="project-card projects__project-card">
-          <h3 class="project-card__title lang_eng">USN</h3>
-          <h3 class="project-card__title lang_rus">Упрощёнка</h3>
-          <p class="project-card__description lang_rus">
-            Сайт времён работы в Актион, моей задачей была вёрстка.
-          </p>
-          <p class="project-card__description lang_eng">About site</p>
-          <div class="project-card__technologies">
-            <ul class="technologies-list project-card__technologies-list">
-              <li class="technologies-list__item">HTML5</li>
-              <li class="technologies-list__item">CSS3</li>
-            </ul>
-          </div>
-          <a class="project-card__link lang_rus" href="#">Перейти на сайт</a>
-          <a class="project-card__link lang_eng" href="#">Go to site >></a>
         </article>
       </div>
       <div class="learning-projects main__learning-projects wrapper">
